# teamviewer-mcp-server

./: .env  .env.example  .gitignore  .mcp.json  .mcp.json.example  CLAUDE.md  LICENSE  README.md  pyproject.toml
src/mcp_teamviewer/: server.py
