[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-teamviewer"
version = "0.1.0"
description = "MCP server for TeamViewer Web API"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Rajesh Huria" }]
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
mcp-teamviewer = "mcp_teamviewer.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_teamviewer"]
